syntax = "proto3";
option    go_package = "/pb";
service FileSync {
  rpc CheckChunk (ChunkInfo) returns (CheckResult) {}
  rpc SyncFileChunk(Chunk) returns (SyncChunkResult){}
  rpc ReadFolderFiles(RemoteFilesMessage) returns (RemoteFilesResult){}
  rpc GetRemoteFileChunkInfo(GetRemoteChunkInfoMessage) returns (RemoteChunkInfo){}
  rpc GetRemoteFileChunk(GetRemoteChunkMessage) returns (RemoteChunk){}
  rpc SyncFileList(SyncFileListMessage) returns (BaseResponse){}
}
message BaseResponse {
  bool success = 1;
}
message ChunkInfo {
  uint64 index    = 1;
  uint64 size     = 2;
  uint64 offset   = 3;
  string checkSum = 4;
  string path     = 5;
  uint64 folderId = 6;
}
message CheckResult {
  bool success = 1;
}

message Chunk {
  uint64 index     = 1;
  uint64 size      = 2;
  uint64 offset    = 3;
  string path      = 4;
  uint64 folderId  = 5;
  bool   LastChunk = 6;
  bytes  data      = 7;
}
message SyncChunkResult {
  bool success = 1;
}
message RemoteFiles {
  string path     = 1;
  uint64 folderId = 2;
  uint64 size     = 3;
}
message RemoteFilesResult {
  repeated RemoteFiles files = 1;
}
message RemoteFilesMessage {
  uint64 folderId = 1;
}
message GetRemoteChunkInfoMessage {
  string path     = 1;
  uint64 folderId = 2;
  uint64 size     = 3;
  uint64 offset   = 4;
}
message RemoteChunkInfo {
  bool   LastChunk = 1;
  string Checksum  = 2;
}
message GetRemoteChunkMessage {
  uint64 size     = 1;
  uint64 offset   = 2;
  string path     = 3;
  uint64 folderId = 4;
}

message RemoteChunk {
  bytes data = 1;
}
message SyncFileItem {
  string path = 1;
}
message SyncFileListMessage {
  repeated SyncFileItem folder   = 1;
  repeated SyncFileItem file     = 2;
  uint64                folderId = 3;
}